footer link changes

--- a/index.html
+++ b/index.html
@@ -1353,14 +1353,16 @@
       <div
         class="flex items-center justify-between mb-19.5 z-2000 max-[768px]:mb-8 relative max-[768px]:flex-col max-[768px]:gap-8 max-[768px]:items-start"
       >
-        <img src="./assets/icons/logo.svg" alt="logo" />
+        <a href="/">
+          <img src="./assets/icons/logo.svg" alt="logo" />
+        </a>
         <div class="flex gap-3">
-          <div class="footer_icon_wrap">
+          <a href="tel:+73832305676" class="footer_icon_wrap">
             <img src="./assets/icons/phone.svg" alt="phone" />
-          </div>
-          <div class="footer_icon_wrap">
+          </a>
+          <a href="https://t.me/your_telegram" target="_blank" class="footer_icon_wrap">
             <img src="./assets/icons/telegram.svg" alt="text" />
-          </div>
+          </a>
           <div class="footer_icon_wrap bg-[#C83A36]!">
             <a
             href="/#header"
@@ -1376,31 +1378,35 @@
       >
         <div class="flex flex-col justify-between">
           <div>
-            <p
+            <a href="/cargo_transportation.html" class="text-[#ffffff99] hover:text-white transition-colors">
+              <p
               class="text-[#ffffff99] mb-4 text-xl space3 font-medium leading-7 max-[1024px]:text-lg max-[768px]:text-xl"
             >
               Грузоперевозки
             </p>
+            </a>
             <ul>
               <li class="text-white space3 font-medium mb-3">
-                Грузоперевозки фурами
+                <a href="/cargo_transportation.html" class="text-white hover:text-[#C83A36] transition-colors">Грузоперевозки фурами</a>
               </li>
               <li class="text-white space3 font-medium mb-3">
-                Грузоперевозки 1,5 тонны
+                <a href="/cargo_transportation.html" class="text-white hover:text-[#C83A36] transition-colors">Грузоперевозки 1,5 тонны</a>
               </li>
               <li class="text-white space3 font-medium mb-3">
-                Грузоперевозки 3 тонны
+                <a href="/cargo_transportation.html" class="text-white hover:text-[#C83A36] transition-colors">Грузоперевозки 3 тонны</a>
               </li>
               <li class="text-white space3 font-medium mb-3">
-                Грузоперевозки 5 тонны
+                <a href="/cargo_transportation.html" class="text-white hover:text-[#C83A36] transition-colors">Грузоперевозки 5 тонны</a>
               </li>
               <li class="text-white space3 font-medium mb-3">
-                Грузоперевозки 10 тонны
+                <a href="/cargo_transportation.html" class="text-white hover:text-[#C83A36] transition-colors">Грузоперевозки 10 тонны</a>
               </li>
               <li class="text-white space3 font-medium mb-3">
-                Грузоперевозки 20 тонны
+                <a href="/cargo_transportation.html" class="text-white hover:text-[#C83A36] transition-colors">Грузоперевозки 20 тонны</a>
               </li>
             </ul>
+            </a>
+            
           </div>
           <p
             class="text-[#ffffff99] space3 max-[1440px]:absolute max-[1440px]:bottom-8 max-[768px]:bottom-4"
@@ -1409,45 +1415,63 @@
           </p>
         </div>
         <div>
-          <p
+          <a href="/road_transportation.html" class="text-[#ffffff99] hover:text-white transition-colors">
+            <p
             class="text-[#ffffff99] mb-4 text-xl space3 font-medium leading-7 max-[1024px]:text-lg max-[768px]:text-xl"
           >
             Автоперевозки
           </p>
+          </a>
           <ul>
             <li class="text-white space3 font-medium mb-3">
-              Международные перевозки
+              <a href="/road_transportation.html" class="text-white hover:text-[#C83A36] transition-colors">Международные перевозки</a>
             </li>
             <li class="text-white space3 font-medium mb-3">
-              Междугородние перевозки
+              <a href="/road_transportation.html" class="text-white hover:text-[#C83A36] transition-colors">Междугородние перевозки</a>
             </li>
             <li class="text-white space3 font-medium mb-3">
-              Перевозка негабаритных грузов
+              <a href="/road_transportation.html" class="text-white hover:text-[#C83A36] transition-colors">Перевозка негабаритных грузов</a>
             </li>
           </ul>
         </div>
         <div>
-          <p
+          <a href="/" class="text-[#ffffff99] hover:text-white transition-colors">
+            <p
             class="text-[#ffffff99] mb-4 text-xl space3 font-medium leading-7 max-[1024px]:text-lg max-[768px]:text-xl"
           >
             Разделы
           </p>
+          </a>
           <ul>
-            <li class="text-white space3 font-medium mb-3">Прайс-лист</li>
-            <li class="text-white space3 font-medium mb-3">Новости</li>
-            <li class="text-white space3 font-medium mb-3">Статьи</li>
-            <li class="text-white space3 font-medium mb-3">Документы</li>
-            <li class="text-white space3 font-medium mb-3">Отзывы</li>
-            <li class="text-white space3 font-medium mb-3">Контакты</li>
+            <li class="text-white space3 font-medium mb-3">
+              <a href="/pricelist.html" class="text-white hover:text-[#C83A36] transition-colors">Прайс-лист</a>
+            </li>
+            <li class="text-white space3 font-medium mb-3">
+              <a href="/news.html" class="text-white hover:text-[#C83A36] transition-colors">Новости</a>
+            </li>
+            <li class="text-white space3 font-medium mb-3">
+              <a href="/blog.html" class="text-white hover:text-[#C83A36] transition-colors">Статьи</a>
+            </li>
+            <li class="text-white space3 font-medium mb-3">
+              <a href="/documents.html" class="text-white hover:text-[#C83A36] transition-colors">Документы</a>
+            </li>
+            <li class="text-white space3 font-medium mb-3">
+              <a href="/reviews.html" class="text-white hover:text-[#C83A36] transition-colors">Отзывы</a>
+            </li>
+            <li class="text-white space3 font-medium mb-3">
+              <a href="/contacts.html" class="text-white hover:text-[#C83A36] transition-colors">Контакты</a>
+            </li>
           </ul>
         </div>
         <div class="flex flex-col justify-between max-[1024px]:hidden">
           <div class="mb-20">
-            <p
+            <a href="/contacts.html" class="text-[#ffffff99] hover:text-white transition-colors">
+              <p
               class="text-[#ffffff99] mb-4 text-xl space3 font-medium leading-7 max-[1024px]:text-lg max-[768px]:text-xl"
             >
               Контакты
             </p>
+            </a>
             <ul>
               <li
                 class="text-white space3 font-medium mb-3 max-w-108 max-[1440px]:max-w-60"
@@ -1456,29 +1480,35 @@
                 62/1, офис 416
               </li>
               <li class="text-white space3 font-medium mb-3">
-                тел. +7 (383)230-56-76
+                <a href="tel:+73832305676" class="text-white hover:text-[#C83A36] transition-colors">тел. +7 (383)230-56-76</a>
               </li>
               <li class="text-white space3 font-medium mb-3">
-                230-56-77, 230-06-13
+                <a href="tel:+73832305677" class="text-white hover:text-[#C83A36] transition-colors">230-56-77</a>, <a href="tel:+73832300613" class="text-white hover:text-[#C83A36] transition-colors">230-06-13</a>
               </li>
               <li class="text-white space3 font-medium mb-3">
-                e-mail: tkcargo-lines@yandex.ru
+                <a href="mailto:tkcargo-lines@yandex.ru" class="text-white hover:text-[#C83A36] transition-colors">e-mail: tkcargo-lines@yandex.ru</a>
               </li>
-              <li class="text-white space3 font-medium mb-3">Отзывы</li>
-              <li class="text-white space3 font-medium">Контакты</li>
+              <li class="text-white space3 font-medium mb-3">
+                <a href="/reviews.html" class="text-white hover:text-[#C83A36] transition-colors">Отзывы</a>
+              </li>
+              <li class="text-white space3 font-medium">
+                <a href="/contacts.html" class="text-white hover:text-[#C83A36] transition-colors">Контакты</a>
+              </li>
             </ul>
           </div>
           <p class="text-[#ffffff99] space3 max-[1440px]:hidden">
-            Политика конфиденциальности
+            <a href="/privacy.html" class="text-[#ffffff99] hover:text-white transition-colors">Политика конфиденциальности</a>
           </p>
         </div>
       </div>
       <div class="hidden max-[1024px]:block">
-        <p
+        <a href="/contacts.html" class="text-[#ffffff99] hover:text-white transition-colors">
+          <p
           class="text-[#ffffff99] mb-4 text-xl space3 font-medium leading-7 max-[1024px]:text-lg max-[768px]:text-xl"
         >
           Контакты
         </p>
+        </a>
         <ul>
           <li
             class="text-white space3 font-medium mb-3 max-w-108 max-[1440px]:max-w-60"
@@ -1487,13 +1517,13 @@
             62/1, офис 416
           </li>
           <li class="text-white space3 font-medium mb-3">
-            тел. +7 (383)230-56-76
+            <a href="tel:+73832305676" class="text-white hover:text-[#C83A36] transition-colors">тел. +7 (383)230-56-76</a>
           </li>
           <li class="text-white space3 font-medium mb-3">
-            230-56-77, 230-06-13
+            <a href="tel:+73832305677" class="text-white hover:text-[#C83A36] transition-colors">230-56-77</a>, <a href="tel:+73832300613" class="text-white hover:text-[#C83A36] transition-colors">230-06-13</a>
           </li>
           <li class="text-white space3 font-medium mb-3">
-            e-mail: tkcargo-lines@yandex.ru
+            <a href="mailto:tkcargo-lines@yandex.ru" class="text-white hover:text-[#C83A36] transition-colors">e-mail: tkcargo-lines@yandex.ru</a>
           </li>
         </ul>
       </div>
