--- a/cargo_transportation.html
+++ b/cargo_transportation.html
@@ -769,11 +769,17 @@
           <div
             class="flex gap-6 mb-6 w-full max-[1440px]:gap-3 max-[1440px]:mb-3 max-[768px]:flex-col"
           >
-            <input type="text" class="input_form" placeholder="Ваше имя" />
             <input
-              type="phone"
+              type="text"
+              id="nameInput"
               class="input_form"
-              placeholder="Номер телефона"
+              placeholder="Ваше имя"
+            />
+            <input
+              type="tel"
+              id="phoneInput"
+              class="input_form"
+              placeholder="+7 (___) ___-__-__"
             />
           </div>
           <textarea
@@ -1113,75 +1119,147 @@
       <section class="px-15 max-[1440px]:px-10 max-[768px]:px-4">
         <h2 class="title mb-14 max-[768px]:mb-8">FAQ</h2>
         <div
-          class="p-12 rounded-3xl mb-3 bg-[#F2F5F7] max-[768px]:px-4 max-[768px]:py-5 max-[768px]:rounded-2xl"
+          class="p-12 accordion-item rounded-3xl mb-3 bg-[#F2F5F7] max-[768px]:px-4 max-[768px]:py-5 max-[768px]:rounded-2xl"
         >
-          <div class="flex items-center justify-between">
+          <div
+            class="flex items-center justify-between cursor-pointer accordion-header"
+          >
             <p
               class="space3 text-[2rem] font-medium leading-10 max-[768px]:text-xl max-[768px]:leading-6"
             >
               Какие типы транспорта вы используете для доставки?
             </p>
-            <img src="./assets/icons/arrowDown.svg" alt="faq" />
+            <img
+              src="./assets/icons/arrowDown.svg"
+              alt="faq"
+              class="accordion-icon"
+            />
+          </div>
+          <div class="accordion-content">
+            <p class="text-[#3A3A3A] space3 text-xl max-[768px]:text-base">
+              Мы используем еврофуры, малотоннажные автомобили, а также
+              выделенный транспорт в зависимости от объема и направления груза.
+            </p>
           </div>
         </div>
         <div
-          class="p-12 rounded-3xl mb-3 bg-[#F2F5F7] max-[768px]:px-4 max-[768px]:py-5 max-[768px]:rounded-2xl"
+          class="p-12 accordion-item rounded-3xl mb-3 bg-[#F2F5F7] max-[768px]:px-4 max-[768px]:py-5 max-[768px]:rounded-2xl"
         >
-          <div class="flex items-center justify-between">
+          <div
+            class="flex items-center justify-between cursor-pointer accordion-header"
+          >
             <p
               class="space3 text-[2rem] font-medium leading-10 max-[768px]:text-xl max-[768px]:leading-6"
             >
               Можно ли заказать доставку с частичной загрузкой (догрузом)?
             </p>
-            <img src="./assets/icons/arrowDown.svg" alt="faq" />
+            <img
+              src="./assets/icons/arrowDown.svg"
+              alt="faq"
+              class="accordion-icon"
+            />
+          </div>
+          <div class="accordion-content">
+            <p class="text-[#3A3A3A] space3 text-xl max-[768px]:text-base">
+              Мы используем еврофуры, малотоннажные автомобили, а также
+              выделенный транспорт в зависимости от объема и направления груза.
+            </p>
           </div>
         </div>
         <div
-          class="p-12 rounded-3xl mb-3 bg-[#F2F5F7] max-[768px]:px-4 max-[768px]:py-5 max-[768px]:rounded-2xl"
+          class="p-12 accordion-item rounded-3xl mb-3 bg-[#F2F5F7] max-[768px]:px-4 max-[768px]:py-5 max-[768px]:rounded-2xl"
         >
-          <div class="flex items-center justify-between">
+          <div
+            class="flex items-center justify-between cursor-pointer accordion-header"
+          >
             <p
               class="space3 text-[2rem] font-medium leading-10 max-[768px]:text-xl max-[768px]:leading-6"
             >
               Работаете ли вы с физическими лицами или только с бизнесом?
             </p>
-            <img src="./assets/icons/arrowDown.svg" alt="faq" />
+            <img
+              src="./assets/icons/arrowDown.svg"
+              alt="faq"
+              class="accordion-icon"
+            />
+          </div>
+          <div class="accordion-content">
+            <p class="text-[#3A3A3A] space3 text-xl max-[768px]:text-base">
+              Мы используем еврофуры, малотоннажные автомобили, а также
+              выделенный транспорт в зависимости от объема и направления груза.
+            </p>
           </div>
         </div>
         <div
-          class="p-12 rounded-3xl mb-3 bg-[#F2F5F7] max-[768px]:px-4 max-[768px]:py-5 max-[768px]:rounded-2xl"
+          class="p-12 accordion-item rounded-3xl mb-3 bg-[#F2F5F7] max-[768px]:px-4 max-[768px]:py-5 max-[768px]:rounded-2xl"
         >
-          <div class="flex items-center justify-between">
+          <div
+            class="flex items-center justify-between cursor-pointer accordion-header"
+          >
             <p
               class="space3 text-[2rem] font-medium leading-10 max-[768px]:text-xl max-[768px]:leading-6"
             >
               Как узнать стоимость доставки?
             </p>
-            <img src="./assets/icons/arrowDown.svg" alt="faq" />
+            <img
+              src="./assets/icons/arrowDown.svg"
+              alt="faq"
+              class="accordion-icon"
+            />
+          </div>
+          <div class="accordion-content">
+            <p class="text-[#3A3A3A] space3 text-xl max-[768px]:text-base">
+              Мы используем еврофуры, малотоннажные автомобили, а также
+              выделенный транспорт в зависимости от объема и направления груза.
+            </p>
           </div>
         </div>
         <div
-          class="p-12 rounded-3xl mb-3 bg-[#F2F5F7] max-[768px]:px-4 max-[768px]:py-5 max-[768px]:rounded-2xl"
+          class="p-12 accordion-item rounded-3xl mb-3 bg-[#F2F5F7] max-[768px]:px-4 max-[768px]:py-5 max-[768px]:rounded-2xl"
         >
-          <div class="flex items-center justify-between">
+          <div
+            class="flex items-center justify-between cursor-pointer accordion-header"
+          >
             <p
               class="space3 text-[2rem] font-medium leading-10 max-[768px]:text-xl max-[768px]:leading-6"
             >
               Как быстро вы сможете организовать выезд транспорта?
             </p>
-            <img src="./assets/icons/arrowDown.svg" alt="faq" />
+            <img
+              src="./assets/icons/arrowDown.svg"
+              alt="faq"
+              class="accordion-icon"
+            />
+          </div>
+          <div class="accordion-content">
+            <p class="text-[#3A3A3A] space3 text-xl max-[768px]:text-base">
+              Мы используем еврофуры, малотоннажные автомобили, а также
+              выделенный транспорт в зависимости от объема и направления груза.
+            </p>
           </div>
         </div>
         <div
-          class="p-12 rounded-3xl mb-36 max-[768px]:mb-8 max-[1440px]:mb-20 bg-[#F2F5F7] max-[768px]:px-4 max-[768px]:py-5 max-[768px]:rounded-2xl"
+          class="p-12 accordion-item rounded-3xl mb-3 bg-[#F2F5F7] max-[768px]:px-4 max-[768px]:py-5 max-[768px]:rounded-2xl"
         >
-          <div class="flex items-center justify-between">
+          <div
+            class="flex items-center justify-between cursor-pointer accordion-header"
+          >
             <p
               class="space3 text-[2rem] font-medium leading-10 max-[768px]:text-xl max-[768px]:leading-6"
             >
               Какие документы нужны для оформления перевозки?
             </p>
-            <img src="./assets/icons/arrowDown.svg" alt="faq" />
+            <img
+              src="./assets/icons/arrowDown.svg"
+              alt="faq"
+              class="accordion-icon"
+            />
+          </div>
+          <div class="accordion-content">
+            <p class="text-[#3A3A3A] space3 text-xl max-[768px]:text-base">
+              Мы используем еврофуры, малотоннажные автомобили, а также
+              выделенный транспорт в зависимости от объема и направления груза.
+            </p>
           </div>
         </div>
       </section>
@@ -1206,11 +1284,17 @@
           <div
             class="flex gap-6 mb-6 w-full max-[1440px]:gap-3 max-[1440px]:mb-3 max-[768px]:flex-col"
           >
-            <input type="text" class="input_form" placeholder="Ваше имя" />
             <input
-              type="phone"
+              type="text"
+              id="nameInput"
               class="input_form"
-              placeholder="Номер телефона"
+              placeholder="Ваше имя"
+            />
+            <input
+              type="tel"
+              id="phoneInput"
+              class="input_form"
+              placeholder="+7 (___) ___-__-__"
             />
           </div>
           <textarea
