--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     />
     <link href="./output.css" rel="stylesheet" />
     <link href="./style.css" rel="stylesheet" />
-    <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
+    <link rel="icon" href="assets/favicon.svg" type="image/svg+xml" />
 
     <title>Грузовые линии</title>
   </head>
   <body>
     <header
+      id="header"
       class="top-0 relative max-[768px]:ronded-xl max-[768px]:px-4 max-[768px]:py-3.5 mx-auto z-100 bg-[#3A3A3A] py-6 px-10 max-[1440px]:py-6 max-[1440px]:px-10 max w-full rounded-b-[25px] border-b border-b-[#FFFFFF33] flex justify-between items-center"
     >
       <div class="flex gap-6 items-center">
@@ -242,7 +243,7 @@
       class="page-container max-w-[1920px] max-[1440px]:max-w-5xl mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-[360px]"
     >
       <section
-        class="flex gap-10 mb-23 pl-15 max-[1440px]:pl-10 relative max-[1440px]:mb-20 max-[768px]:mb-16 max-[1024px]:pl-5 max-[1024px]:gap-2 max-[768px]:px-4 max-[768px]:flex-col"
+        class="flex gap-10 max-[1440px]:gap-5 mb-23 pl-15 max-[1440px]:pl-10 relative max-[1440px]:mb-20 max-[768px]:mb-16 max-[1024px]:pl-5 max-[1024px]:gap-2 max-[768px]:px-4 max-[768px]:flex-col"
       >
         <div class="flex-1">
           <div
@@ -270,10 +271,12 @@
             <img
               src="./assets/icons/aboutLineTablet.svg"
               alt="about"
-              class="hidden max-[1440px]:block max-[768px]:hidden"
+              class="hidden max-[1440px]:block w-42 h-74 max-[768px]:hidden"
             />
           </div>
-          <div class="flex gap-3 mb-3 max-[1024px]:gap-2 max-[1024px]:mb-2">
+          <div
+            class="flex gap-3 mb-3 max-[1440px]:gap-2 max-[1024px]:mb-2 shrink-0"
+          >
             <div class="about_company_wrap radius_left">
               <div class="about_icon_wrap">
                 <img
@@ -283,7 +286,9 @@
                 />
               </div>
               <p class="about_title">3000+</p>
-              <p class="about_info">Заказов выполняем ежемесячно</p>
+              <p class="about_info min-[1919px]:max-w-[200px]">
+                Заказов выполняем ежемесячно
+              </p>
             </div>
             <div class="about_company_wrap radius_right">
               <div class="about_icon_wrap">
@@ -309,7 +314,9 @@
                 />
               </div>
               <p class="about_title">15 млн ₽</p>
-              <p class="about_info">Страховое покрытие ответсвенности</p>
+              <p class="about_info min-[1919px]:whitespace-nowrap">
+                Страховое покрытие ответсвенности
+              </p>
             </div>
             <div class="about_company_wrap radius_right">
               <div class="about_icon_wrap">
@@ -325,9 +332,7 @@
           </div>
         </div>
 
-        <div
-          class="about-image-wrap flex-1 relative pt-40 max-[1440px]:pt-20 max-[768px]:pt-3"
-        >
+        <div class="relative flex-1 pt-40 max-[1440px]:pt-20 max-[768px]:pt-3">
           <p class="font-medium text-2xl mb-6 space3 max-[1440px]:hidden">
             Логистика для бизнеса
             <span class="text-[#C83A36] leading-8"
@@ -335,7 +340,7 @@
             >
           </p>
           <p
-            class="space3 text-xl leading-7 mb-8 max-w-148 max-[1440px]:text-sm max-[1440px]:leading-4.5 max-[1024px]:mb-6 max-[768px]:hidden"
+            class="space3 text-xl leading-7 mb-8 max-w-148 max-[1440px]:max-w-79 max-[1024px]:max-w-full max-[1440px]:text-sm max-[1440px]:leading-4.5 max-[1024px]:mb-6 max-[768px]:hidden"
           >
             “Грузовые линии” - надежный оператор грузоперевозок,
             специализирующийся на логистических решениях с 2008 года, и берет на
@@ -355,7 +360,7 @@
           <img
             src="./assets/images/about_company.png"
             alt="about"
-            class="about-image object-cover w-236 h-181 max-[1920px]:w-210 max-[1920px]:h-160 max-[1440px]:h-110 max-[768ox]:w-82 max-[768px]:h-82 max-[768px]:rounded-3xl! max-[768px]:mt-0 max-[1440px]:mt-20 rounded-l-4xl max-[1024px]:mt-17 max-[1024px]:rounded-l-3xl max-[1024px]:h-102.5"
+            class="object-cover w-full h-185 max-[1920px]:w-210 max-[1920px]:h-160 max-[1439px]:w-125.5 max-[1439px]:h-110 max-[768px]:w-82 max-[768px]:h-82 max-[768px]:rounded-3xl! max-[768px]:mt-0 max-[1440px]:mt-11 rounded-l-4xl max-[1024px]:mt-17 max-[1024px]:rounded-l-3xl max-[1024px]:h-102.5 max-[1024px]:w-81"
           />
         </div>
       </section>
@@ -430,7 +435,7 @@
             <img
               src="./assets/images/service3.png"
               alt="service1"
-              class="service-card-image absolute bottom-0 right-0 w-120 h-100 max-[1440px]:w-70 max-[768px]:w-45 max-[768px]:h-45 max-[768px]:right-0 max-[1440px]:h-60 max-[1024px]:right-11 max-[1024px]:bottom-2 max-[1024px]:w-60 max-[1024px]:h-50"
+              class="service-card-image absolute bottom-0 right-3 w-120 h-100 max-[1440px]:w-70 max-[768px]:w-45 max-[768px]:h-45 max-[768px]:right-0 max-[1440px]:h-60 max-[1024px]:right-11 max-[1024px]:bottom-2 max-[1024px]:w-60 max-[1024px]:h-50"
             />
           </a>
 
@@ -472,7 +477,7 @@
             <img
               src="./assets/images/service5.png"
               alt="service1"
-              class="service-card-image absolute bottom-0 right-0 w-195 h-130 object-cover max-[1440px]:w-90 max-[1440px]:h-70 max-[1024px]:hidden"
+              class="service-card-image absolute radius_right radius_servie5 bottom-0 right-0 w-195 h-130 object-cover max-[1440px]:w-90 max-[1440px]:h-70 max-[1024px]:hidden"
             />
             <img
               src="./assets/images/service5.png"
@@ -767,11 +772,17 @@
           <div
             class="flex gap-6 mb-6 w-full max-[1440px]:gap-3 max-[1440px]:mb-3 max-[768px]:flex-col"
           >
-            <input type="text" class="input_form" placeholder="Ваше имя" />
             <input
-              type="phone"
+              type="text"
+              id="nameInput"
               class="input_form"
-              placeholder="Номер телефона"
+              placeholder="Ваше имя"
+            />
+            <input
+              type="tel"
+              id="phoneInput"
+              class="input_form"
+              placeholder="+7 (___) ___-__-__"
             />
           </div>
           <textarea
@@ -1109,78 +1120,152 @@
           </div>
         </div>
       </section>
-      <section class="px-15 max-[1440px]:px-10 max-[768px]:px-4">
+      <section
+        class="px-15 max-[1440px]:px-10 max-[768px]:px-4 mb-36 max-[1440px]:mb-20 max-[768px]:mb-16"
+      >
         <h2 class="title mb-14 max-[768px]:mb-8">FAQ</h2>
         <div
-          class="p-12 rounded-3xl mb-3 bg-[#F2F5F7] max-[768px]:px-4 max-[768px]:py-5 max-[768px]:rounded-2xl"
+          class="p-12 accordion-item rounded-3xl mb-3 bg-[#F2F5F7] max-[768px]:px-4 max-[768px]:py-5 max-[768px]:rounded-2xl"
         >
-          <div class="flex items-center justify-between">
+          <div
+            class="flex items-center justify-between cursor-pointer accordion-header"
+          >
             <p
               class="space3 text-[2rem] font-medium leading-10 max-[768px]:text-xl max-[768px]:leading-6"
             >
               Какие типы транспорта вы используете для доставки?
             </p>
-            <img src="./assets/icons/arrowDown.svg" alt="faq" />
+            <img
+              src="./assets/icons/arrowDown.svg"
+              alt="faq"
+              class="accordion-icon"
+            />
+          </div>
+          <div class="accordion-content">
+            <p class="text-[#3A3A3A] space3 text-xl max-[768px]:text-base">
+              Мы используем еврофуры, малотоннажные автомобили, а также
+              выделенный транспорт в зависимости от объема и направления груза.
+            </p>
           </div>
         </div>
         <div
-          class="p-12 rounded-3xl mb-3 bg-[#F2F5F7] max-[768px]:px-4 max-[768px]:py-5 max-[768px]:rounded-2xl"
+          class="p-12 accordion-item rounded-3xl mb-3 bg-[#F2F5F7] max-[768px]:px-4 max-[768px]:py-5 max-[768px]:rounded-2xl"
         >
-          <div class="flex items-center justify-between">
+          <div
+            class="flex items-center justify-between cursor-pointer accordion-header"
+          >
             <p
               class="space3 text-[2rem] font-medium leading-10 max-[768px]:text-xl max-[768px]:leading-6"
             >
               Можно ли заказать доставку с частичной загрузкой (догрузом)?
             </p>
-            <img src="./assets/icons/arrowDown.svg" alt="faq" />
+            <img
+              src="./assets/icons/arrowDown.svg"
+              alt="faq"
+              class="accordion-icon"
+            />
+          </div>
+          <div class="accordion-content">
+            <p class="text-[#3A3A3A] space3 text-xl max-[768px]:text-base">
+              Мы используем еврофуры, малотоннажные автомобили, а также
+              выделенный транспорт в зависимости от объема и направления груза.
+            </p>
           </div>
         </div>
         <div
-          class="p-12 rounded-3xl mb-3 bg-[#F2F5F7] max-[768px]:px-4 max-[768px]:py-5 max-[768px]:rounded-2xl"
+          class="p-12 accordion-item rounded-3xl mb-3 bg-[#F2F5F7] max-[768px]:px-4 max-[768px]:py-5 max-[768px]:rounded-2xl"
         >
-          <div class="flex items-center justify-between">
+          <div
+            class="flex items-center justify-between cursor-pointer accordion-header"
+          >
             <p
               class="space3 text-[2rem] font-medium leading-10 max-[768px]:text-xl max-[768px]:leading-6"
             >
               Работаете ли вы с физическими лицами или только с бизнесом?
             </p>
-            <img src="./assets/icons/arrowDown.svg" alt="faq" />
+            <img
+              src="./assets/icons/arrowDown.svg"
+              alt="faq"
+              class="accordion-icon"
+            />
+          </div>
+          <div class="accordion-content">
+            <p class="text-[#3A3A3A] space3 text-xl max-[768px]:text-base">
+              Мы используем еврофуры, малотоннажные автомобили, а также
+              выделенный транспорт в зависимости от объема и направления груза.
+            </p>
           </div>
         </div>
         <div
-          class="p-12 rounded-3xl mb-3 bg-[#F2F5F7] max-[768px]:px-4 max-[768px]:py-5 max-[768px]:rounded-2xl"
+          class="p-12 accordion-item rounded-3xl mb-3 bg-[#F2F5F7] max-[768px]:px-4 max-[768px]:py-5 max-[768px]:rounded-2xl"
         >
-          <div class="flex items-center justify-between">
+          <div
+            class="flex items-center justify-between cursor-pointer accordion-header"
+          >
             <p
               class="space3 text-[2rem] font-medium leading-10 max-[768px]:text-xl max-[768px]:leading-6"
             >
               Как узнать стоимость доставки?
             </p>
-            <img src="./assets/icons/arrowDown.svg" alt="faq" />
+            <img
+              src="./assets/icons/arrowDown.svg"
+              alt="faq"
+              class="accordion-icon"
+            />
+          </div>
+          <div class="accordion-content">
+            <p class="text-[#3A3A3A] space3 text-xl max-[768px]:text-base">
+              Мы используем еврофуры, малотоннажные автомобили, а также
+              выделенный транспорт в зависимости от объема и направления груза.
+            </p>
           </div>
         </div>
         <div
-          class="p-12 rounded-3xl mb-3 bg-[#F2F5F7] max-[768px]:px-4 max-[768px]:py-5 max-[768px]:rounded-2xl"
+          class="p-12 accordion-item rounded-3xl mb-3 bg-[#F2F5F7] max-[768px]:px-4 max-[768px]:py-5 max-[768px]:rounded-2xl"
         >
-          <div class="flex items-center justify-between">
+          <div
+            class="flex items-center justify-between cursor-pointer accordion-header"
+          >
             <p
               class="space3 text-[2rem] font-medium leading-10 max-[768px]:text-xl max-[768px]:leading-6"
             >
               Как быстро вы сможете организовать выезд транспорта?
             </p>
-            <img src="./assets/icons/arrowDown.svg" alt="faq" />
+            <img
+              src="./assets/icons/arrowDown.svg"
+              alt="faq"
+              class="accordion-icon"
+            />
+          </div>
+          <div class="accordion-content">
+            <p class="text-[#3A3A3A] space3 text-xl max-[768px]:text-base">
+              Мы используем еврофуры, малотоннажные автомобили, а также
+              выделенный транспорт в зависимости от объема и направления груза.
+            </p>
           </div>
         </div>
         <div
-          class="p-12 rounded-3xl mb-36 max-[768px]:mb-8 max-[1440px]:mb-20 bg-[#F2F5F7] max-[768px]:px-4 max-[768px]:py-5 max-[768px]:rounded-2xl"
+          class="p-12 accordion-item rounded-3xl mb-3 bg-[#F2F5F7] max-[768px]:px-4 max-[768px]:py-5 max-[768px]:rounded-2xl"
         >
-          <div class="flex items-center justify-between">
+          <div
+            class="flex items-center justify-between cursor-pointer accordion-header"
+          >
             <p
               class="space3 text-[2rem] font-medium leading-10 max-[768px]:text-xl max-[768px]:leading-6"
             >
               Какие документы нужны для оформления перевозки?
             </p>
-            <img src="./assets/icons/arrowDown.svg" alt="faq" />
+            <img
+              src="./assets/icons/arrowDown.svg"
+              alt="faq"
+              class="accordion-icon"
+            />
+          </div>
+          <div class="accordion-content">
+            <p class="text-[#3A3A3A] space3 text-xl max-[768px]:text-base">
+              Мы используем еврофуры, малотоннажные автомобили, а также
+              выделенный транспорт в зависимости от объема и направления груза.
+            </p>
           </div>
         </div>
       </section>
@@ -1205,11 +1290,17 @@
           <div
             class="flex gap-6 mb-6 w-full max-[1440px]:gap-3 max-[1440px]:mb-3 max-[768px]:flex-col"
           >
-            <input type="text" class="input_form" placeholder="Ваше имя" />
             <input
-              type="phone"
+              type="text"
+              id="nameInput"
               class="input_form"
-              placeholder="Номер телефона"
+              placeholder="Ваше имя"
+            />
+            <input
+              type="tel"
+              id="phoneInput"
+              class="input_form"
+              placeholder="+7 (___) ___-__-__"
             />
           </div>
           <textarea
@@ -1346,9 +1437,9 @@
           <div class="footer_icon_wrap">
             <img src="./assets/icons/telegram.svg" alt="text" />
           </div>
-          <div class="footer_icon_wrap bg-[#C83A36]!">
+          <a href="#" class="footer_icon_wrap bg-[#C83A36]!">
             <img src="./assets/icons/arrowUpWhite.svg" alt="arrow" />
-          </div>
+          </a>
         </div>
       </div>
       <div
