--- a/news.html
+++ b/news.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <header
+      id="header"
       class="top-0 relative max-[768px]:ronded-xl max-[768px]:px-4 max-[768px]:py-3.5 mx-auto z-100 bg-[#3A3A3A] py-6 px-10 max-[1440px]:py-6 max-[1440px]:px-10 max w-full rounded-b-[25px] border-b border-b-[#FFFFFF33] flex justify-between items-center"
     >
       <div class="flex gap-6 items-center">
@@ -319,9 +320,9 @@
           <div class="footer_icon_wrap">
             <img src="./assets/icons/telegram.svg" alt="text" />
           </div>
-          <div class="footer_icon_wrap bg-[#C83A36]!">
+          <a href="#" class="footer_icon_wrap bg-[#C83A36]!">
             <img src="./assets/icons/arrowUpWhite.svg" alt="arrow" />
-          </div>
+          </a>
         </div>
       </div>
       <div
