--- a/pricelist.html
+++ b/pricelist.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <header
+      id="header"
       class="top-0 relative max-[768px]:ronded-xl max-[768px]:px-4 max-[768px]:py-3.5 mx-auto z-100 bg-[#3A3A3A] py-6 px-10 max-[1440px]:py-6 max-[1440px]:px-10 max w-full rounded-b-[25px] border-b border-b-[#FFFFFF33] flex justify-between items-center"
     >
       <div class="flex gap-6 items-center">
@@ -454,11 +455,17 @@
           <div
             class="flex gap-6 mb-6 w-full max-[1440px]:gap-3 max-[1440px]:mb-3 max-[768px]:flex-col"
           >
-            <input type="text" class="input_form" placeholder="Ваше имя" />
             <input
-              type="phone"
+              type="text"
+              id="nameInput"
               class="input_form"
-              placeholder="Номер телефона"
+              placeholder="Ваше имя"
+            />
+            <input
+              type="tel"
+              id="phoneInput"
+              class="input_form"
+              placeholder="+7 (___) ___-__-__"
             />
           </div>
           <textarea
@@ -477,78 +484,152 @@
           </button>
         </div>
       </section>
-      <section class="mb-40 max-[1440px]:mb-20 max-[1024px]:mb-16">
+      <section
+        class="mb-40 max-[1440px]:mb-20 max-[1024px]:mb-16 px-15 max-[1440px]:px-10 max-[1024px]:px-5"
+      >
         <h2 class="title mb-14 max-[768px]:mb-8">FAQ</h2>
         <div
-          class="p-12 rounded-3xl mb-3 bg-[#F2F5F7] max-[768px]:px-4 max-[768px]:py-5 max-[768px]:rounded-2xl"
+          class="p-12 accordion-item rounded-3xl mb-3 bg-[#F2F5F7] max-[768px]:px-4 max-[768px]:py-5 max-[768px]:rounded-2xl"
         >
-          <div class="flex items-center justify-between">
+          <div
+            class="flex items-center justify-between cursor-pointer accordion-header"
+          >
             <p
               class="space3 text-[2rem] font-medium leading-10 max-[768px]:text-xl max-[768px]:leading-6"
             >
               Какие типы транспорта вы используете для доставки?
             </p>
-            <img src="./assets/icons/arrowDown.svg" alt="faq" />
+            <img
+              src="./assets/icons/arrowDown.svg"
+              alt="faq"
+              class="accordion-icon"
+            />
+          </div>
+          <div class="accordion-content">
+            <p class="text-[#3A3A3A] space3 text-xl max-[768px]:text-base">
+              Мы используем еврофуры, малотоннажные автомобили, а также
+              выделенный транспорт в зависимости от объема и направления груза.
+            </p>
           </div>
         </div>
         <div
-          class="p-12 rounded-3xl mb-3 bg-[#F2F5F7] max-[768px]:px-4 max-[768px]:py-5 max-[768px]:rounded-2xl"
+          class="p-12 accordion-item rounded-3xl mb-3 bg-[#F2F5F7] max-[768px]:px-4 max-[768px]:py-5 max-[768px]:rounded-2xl"
         >
-          <div class="flex items-center justify-between">
+          <div
+            class="flex items-center justify-between cursor-pointer accordion-header"
+          >
             <p
               class="space3 text-[2rem] font-medium leading-10 max-[768px]:text-xl max-[768px]:leading-6"
             >
               Можно ли заказать доставку с частичной загрузкой (догрузом)?
             </p>
-            <img src="./assets/icons/arrowDown.svg" alt="faq" />
+            <img
+              src="./assets/icons/arrowDown.svg"
+              alt="faq"
+              class="accordion-icon"
+            />
+          </div>
+          <div class="accordion-content">
+            <p class="text-[#3A3A3A] space3 text-xl max-[768px]:text-base">
+              Мы используем еврофуры, малотоннажные автомобили, а также
+              выделенный транспорт в зависимости от объема и направления груза.
+            </p>
           </div>
         </div>
         <div
-          class="p-12 rounded-3xl mb-3 bg-[#F2F5F7] max-[768px]:px-4 max-[768px]:py-5 max-[768px]:rounded-2xl"
+          class="p-12 accordion-item rounded-3xl mb-3 bg-[#F2F5F7] max-[768px]:px-4 max-[768px]:py-5 max-[768px]:rounded-2xl"
         >
-          <div class="flex items-center justify-between">
+          <div
+            class="flex items-center justify-between cursor-pointer accordion-header"
+          >
             <p
               class="space3 text-[2rem] font-medium leading-10 max-[768px]:text-xl max-[768px]:leading-6"
             >
               Работаете ли вы с физическими лицами или только с бизнесом?
             </p>
-            <img src="./assets/icons/arrowDown.svg" alt="faq" />
+            <img
+              src="./assets/icons/arrowDown.svg"
+              alt="faq"
+              class="accordion-icon"
+            />
+          </div>
+          <div class="accordion-content">
+            <p class="text-[#3A3A3A] space3 text-xl max-[768px]:text-base">
+              Мы используем еврофуры, малотоннажные автомобили, а также
+              выделенный транспорт в зависимости от объема и направления груза.
+            </p>
           </div>
         </div>
         <div
-          class="p-12 rounded-3xl mb-3 bg-[#F2F5F7] max-[768px]:px-4 max-[768px]:py-5 max-[768px]:rounded-2xl"
+          class="p-12 accordion-item rounded-3xl mb-3 bg-[#F2F5F7] max-[768px]:px-4 max-[768px]:py-5 max-[768px]:rounded-2xl"
         >
-          <div class="flex items-center justify-between">
+          <div
+            class="flex items-center justify-between cursor-pointer accordion-header"
+          >
             <p
               class="space3 text-[2rem] font-medium leading-10 max-[768px]:text-xl max-[768px]:leading-6"
             >
               Как узнать стоимость доставки?
             </p>
-            <img src="./assets/icons/arrowDown.svg" alt="faq" />
+            <img
+              src="./assets/icons/arrowDown.svg"
+              alt="faq"
+              class="accordion-icon"
+            />
+          </div>
+          <div class="accordion-content">
+            <p class="text-[#3A3A3A] space3 text-xl max-[768px]:text-base">
+              Мы используем еврофуры, малотоннажные автомобили, а также
+              выделенный транспорт в зависимости от объема и направления груза.
+            </p>
           </div>
         </div>
         <div
-          class="p-12 rounded-3xl mb-3 bg-[#F2F5F7] max-[768px]:px-4 max-[768px]:py-5 max-[768px]:rounded-2xl"
+          class="p-12 accordion-item rounded-3xl mb-3 bg-[#F2F5F7] max-[768px]:px-4 max-[768px]:py-5 max-[768px]:rounded-2xl"
         >
-          <div class="flex items-center justify-between">
+          <div
+            class="flex items-center justify-between cursor-pointer accordion-header"
+          >
             <p
               class="space3 text-[2rem] font-medium leading-10 max-[768px]:text-xl max-[768px]:leading-6"
             >
               Как быстро вы сможете организовать выезд транспорта?
             </p>
-            <img src="./assets/icons/arrowDown.svg" alt="faq" />
+            <img
+              src="./assets/icons/arrowDown.svg"
+              alt="faq"
+              class="accordion-icon"
+            />
+          </div>
+          <div class="accordion-content">
+            <p class="text-[#3A3A3A] space3 text-xl max-[768px]:text-base">
+              Мы используем еврофуры, малотоннажные автомобили, а также
+              выделенный транспорт в зависимости от объема и направления груза.
+            </p>
           </div>
         </div>
         <div
-          class="p-12 rounded-3xl mb-36 max-[768px]:mb-8 max-[1440px]:mb-20 bg-[#F2F5F7] max-[768px]:px-4 max-[768px]:py-5 max-[768px]:rounded-2xl"
+          class="p-12 accordion-item rounded-3xl mb-3 bg-[#F2F5F7] max-[768px]:px-4 max-[768px]:py-5 max-[768px]:rounded-2xl"
         >
-          <div class="flex items-center justify-between">
+          <div
+            class="flex items-center justify-between cursor-pointer accordion-header"
+          >
             <p
               class="space3 text-[2rem] font-medium leading-10 max-[768px]:text-xl max-[768px]:leading-6"
             >
               Какие документы нужны для оформления перевозки?
             </p>
-            <img src="./assets/icons/arrowDown.svg" alt="faq" />
+            <img
+              src="./assets/icons/arrowDown.svg"
+              alt="faq"
+              class="accordion-icon"
+            />
+          </div>
+          <div class="accordion-content">
+            <p class="text-[#3A3A3A] space3 text-xl max-[768px]:text-base">
+              Мы используем еврофуры, малотоннажные автомобили, а также
+              выделенный транспорт в зависимости от объема и направления груза.
+            </p>
           </div>
         </div>
       </section>
@@ -567,9 +648,9 @@
           <div class="footer_icon_wrap">
             <img src="./assets/icons/telegram.svg" alt="text" />
           </div>
-          <div class="footer_icon_wrap bg-[#C83A36]!">
+          <a href="#" class="footer_icon_wrap bg-[#C83A36]!">
             <img src="./assets/icons/arrowUpWhite.svg" alt="arrow" />
-          </div>
+          </a>
         </div>
       </div>
       <div
@@ -700,5 +781,5 @@
       </div>
     </footer>
   </body>
-  <script src="main.js"></script>
+  <script src="main.js" type="module"></script>
 </html>
