address click and arrowup

--- a/index.html
+++ b/index.html
@@ -1454,7 +1454,7 @@
           <a href="https://t.me/your_telegram" target="_blank" class="footer_icon_wrap">
             <img src="./assets/icons/telegram.svg" alt="text" />
           </a>
-          <a href="#header" class="footer_icon_wrap bg-[#C83A36]!">
+          <a href="#header" id="arrowUp" class="footer_icon_wrap bg-[#C83A36]!">
             <img src="./assets/icons/arrowUpWhite.svg" alt="arrow" />
           </a>
         </div>
@@ -1559,11 +1559,9 @@
             </p>
             </a>
             <ul>
-              <li
-                class="text-white space3 font-medium mb-3 max-w-108 max-[1440px]:max-w-60"
-              >
-                ООО АТЭК «Грузовые линии» 630071, Новосибирск, ул. Станционная,
-                62/1, офис 416
+              <li class="text-white space3 font-medium mb-3 max-w-108 max-[1440px]:max-w-60">
+                <a href="https://yandex.uz/maps/65/novosibirsk/house/stantsionnaya_ulitsa_62_1/bEsYfgVmTU0DQFtufXV4dnpnZQ==/?ll=82.826483%2C54.997641&z=16" class="text-white hover:text-[#C83A36] transition-colors">ООО АТЭК «Грузовые линии» 630071, Новосибирск, ул. Станционная,
+                62/1, офис 416</a>
               </li>
               <li class="text-white space3 font-medium mb-3">
                 <a href="tel:+73832305676" class="text-white hover:text-[#C83A36] transition-colors">тел. +7 (383)230-56-76</a>
