--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
           <img
             src="./assets/images/about_company.png"
             alt="about"
-            class="object-cover w-full h-185 max-[1920px]:w-210 max-[1920px]:h-160 max-[1439px]:w-125.5 max-[1439px]:h-110 max-[768px]:w-82 max-[768px]:h-82 max-[768px]:rounded-3xl! max-[768px]:mt-0 max-[1440px]:mt-11 rounded-l-4xl max-[1024px]:mt-17 max-[1024px]:rounded-l-3xl max-[1024px]:h-102.5 max-[1024px]:w-81"
+            class="h-185 object-cover min-[1920xp]:w-full max-[1920px]:h-160 max-[1439px]:w-125.5 max-[1439px]:h-110 max-[768px]:w-82 max-[768px]:h-82 max-[768px]:rounded-3xl! max-[768px]:mt-0 max-[1440px]:mt-11 rounded-l-4xl max-[1024px]:mt-17 max-[1024px]:rounded-l-3xl max-[1024px]:h-102.5 max-[1024px]:w-81"
           />
         </div>
       </section>
