--- a/road_transportation.html
+++ b/road_transportation.html
@@ -1587,8 +1587,12 @@
               <li
                 class="text-white space3 font-medium mb-3 max-w-108 max-[1440px]:max-w-60"
               >
-                ООО АТЭК «Грузовые линии» 630071, Новосибирск, ул. Станционная,
-                62/1, офис 416
+                <a
+                  href="https://yandex.uz/maps/65/novosibirsk/house/stantsionnaya_ulitsa_62_1/bEsYfgVmTU0DQFtufXV4dnpnZQ==/?ll=82.826483%2C54.997641&z=16"
+                  class="text-white hover:text-[#C83A36] transition-colors"
+                  >ООО АТЭК «Грузовые линии» 630071, Новосибирск, ул.
+                  Станционная, 62/1, офис 416</a
+                >
               </li>
               <li class="text-white space3 font-medium mb-3">
                 <a
