--- a/blog.html
+++ b/blog.html
@@ -19,11 +19,13 @@
       class="top-0 relative max-[768px]:ronded-xl max-[768px]:px-4 max-[768px]:py-3.5 mx-auto z-100 bg-[#3A3A3A] py-6 px-10 max-[1440px]:py-6 max-[1440px]:px-10 max w-full rounded-b-[25px] border-b border-b-[#FFFFFF33] flex justify-between items-center"
     >
       <div class="flex gap-6 items-center">
-        <img
-          src="./assets/icons/logo.svg"
-          alt="logo"
-          class="mr-6 max-[768px]:w-25 max-[768px]:h-7"
-        />
+        <a href="/">
+          <img
+            src="./assets/icons/logo.svg"
+            alt="logo"
+            class="mr-6 max-[768px]:w-25 max-[768px]:h-7"
+          />
+        </a>
         <div class="flex gap-6 max-[1440px]:hidden">
           <a href="./cargo_transportation.html" class="flex items-center gap-1">
             <p class="text-white font-medium text-xl">Грузоперевозки</p>
@@ -131,25 +133,44 @@
     <main
       class="max-w-[1920px] max-[1440px]:max-w-5xl mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-[360px] px-15 py-30 max-[1440px]:px-5 max-[1440px]:py-25 max-[768px]:px-4 max-[768px]:py-10"
     >
-      <div class="flex gap-47">
-        <div class="max-[1440px]:hidden">
-          <h3 class="text-[#3A3A3A] mb-5 font-medium text-xl">Оглавление</h3>
-          <p class="text-[#3A3A3A] mb-3">
-            <span class="mr-1">---</span> Виды стрелковых спортов
-          </p>
-          <p class="text-[#3A3A3A] mb-3">
-            <span class="mr-1">---</span> Как выбрать подходящий вид стрелкового
-            спорта
-          </p>
-          <p class="text-[#3A3A3A] mb-3">
-            <span class="mr-1">---</span> Где можно практиковаться
-          </p>
-          <p class="text-[#3A3A3A] mb-3">
-            <span class="mr-1">---</span> Заключение
-          </p>
+      <div class="flex gap-47 relative">
+        <div>
+          <div class="max-[1440px]:hidden sticky top-10">
+            <h3 class="text-[#3A3A3A] mb-5 font-medium text-xl">Оглавление</h3>
+
+            <p
+              data-scroll="#section1"
+              class="text-[#3A3A3A] mb-3 cursor-pointer"
+            >
+              <span class="mr-1">---</span> Виды стрелковых спортов
+            </p>
+
+            <p
+              data-scroll="#section2"
+              class="text-[#3A3A3A] mb-3 cursor-pointer"
+            >
+              <span class="mr-1">---</span> Как выбрать подходящий вид
+              стрелкового спорта
+            </p>
+
+            <p
+              data-scroll="#section3"
+              class="text-[#3A3A3A] mb-3 cursor-pointer"
+            >
+              <span class="mr-1">---</span> Где можно практиковаться
+            </p>
+
+            <p
+              data-scroll="#section4"
+              class="text-[#3A3A3A] mb-3 cursor-pointer"
+            >
+              <span class="mr-1">---</span> Заключение
+            </p>
+          </div>
         </div>
         <div class="flex-1">
           <h1
+            id="section1"
             class="text-[#3A3A3A] text-[4rem] mb-8 font-medium leading-[100%] space3 max-[1440px]:text-5xl max-[768px]:text-2xl max-[768px]:mb-4"
           >
             Виды грузоперевозок в России по сегментам
@@ -252,6 +273,7 @@
             </p>
           </div>
           <h2
+            id="section2"
             class="text-[#3A3A3A] mb-8 space3 leading-[100%] font-medium text-[3.5rem] max-[1440px]:text-5xl"
           >
             Как выбрать подходящий вид стрелкового спорта
@@ -297,6 +319,7 @@
             class="hidden max-[768px]:block mb-8"
           />
           <h2
+            id="section3"
             class="text-[#3A3A3A] mb-8 space3 leading-[100%] font-medium text-[3.5rem] max-[1440px]:text-5xl"
           >
             Где и каким способом чаще всего перевозят грузы?
@@ -334,6 +357,7 @@
             </p>
           </div>
           <h2
+            id="section4"
             class="text-[#3A3A3A] mb-8 space3 leading-[100%] font-medium text-[3.5rem] max-[1440px]:text-5xl"
           >
             Заключение
@@ -658,4 +682,5 @@
       </div>
     </footer>
   </body>
+  <script src="main.js" type="module"></script>
 </html>
