--- a/news.html
+++ b/news.html
@@ -157,17 +157,17 @@
       <h2 class="title mb-8">Новости</h2>
       <div class="flex gap-4 mb-12 overflow-auto max-[768px]:mb-10">
         <button
-          class="py-4 shrink-0 px-6 bg-[#3A3A3A] flex items-center rounded-2xl text-white text-2xl max-[1024px]:text-xl max-[1024px]:py-3 max-[1024px]:px-4"
+          class="py-4 tab-btn active shrink-0 px-6 bg-[#3A3A3A] flex items-center rounded-2xl text-white text-2xl max-[1024px]:text-xl max-[1024px]:py-3 max-[1024px]:px-4"
         >
           Все
         </button>
         <button
-          class="py-4 shrink-0 px-6 bg-[#F2F5F7] flex items-center rounded-2xl text-[#3A3A3A] text-2xl max-[1024px]:text-xl max-[1024px]:py-3 max-[1024px]:px-4"
+          class="py-4 shrink-0 tab-btn px-6 bg-[#F2F5F7] flex items-center rounded-2xl text-[#3A3A3A] text-2xl max-[1024px]:text-xl max-[1024px]:py-3 max-[1024px]:px-4"
         >
           Новости компании
         </button>
         <button
-          class="py-4 shrink-0 px-6 bg-[#F2F5F7] flex items-center rounded-2xl text-[#3A3A3A] text-2xl max-[1024px]:text-xl max-[1024px]:py-3 max-[1024px]:px-4"
+          class="py-4 shrink-0 px-6 tab-btn bg-[#F2F5F7] flex items-center rounded-2xl text-[#3A3A3A] text-2xl max-[1024px]:text-xl max-[1024px]:py-3 max-[1024px]:px-4"
         >
           Новости по грузоперевозкам
         </button>
