--- a/road_transportation.html
+++ b/road_transportation.html
@@ -7,6 +7,7 @@
     <link href="./output.css" rel="stylesheet" />
     <link href="./style.css" rel="stylesheet" />
     <link href="./priceList.css" rel="stylesheet" />
+    <link href="./cart.css" rel="stylesheet" />
     <title>Road transportation</title>
   </head>
   <body>
@@ -621,13 +622,13 @@
         </h2>
         <div class="flex gap-4 mb-16 overflow-auto max-[768px]:mb-10">
           <button
-            class="py-4 shrink-0 px-6 bg-[#3A3A3A] flex items-center rounded-2xl text-white text-2xl max-[1024px]:text-xl max-[1024px]:py-3 max-[1024px]:px-4"
+            class="tab-btn active py-4 shrink-0 px-6 flex items-center rounded-2xl text-2xl max-[1024px]:text-xl max-[1024px]:py-3 max-[1024px]:px-4"
           >
             По Новосибирску
           </button>
 
           <button
-            class="py-4 shrink-0 px-6 bg-[#F2F5F7] flex items-center rounded-2xl text-[#3A3A3A] text-2xl max-[1024px]:text-xl max-[1024px]:py-3 max-[1024px]:px-4"
+            class="tab-btn py-4 shrink-0 px-6 flex items-center rounded-2xl text-2xl max-[1024px]:text-xl max-[1024px]:py-3 max-[1024px]:px-4"
           >
             По всей России
           </button>
@@ -709,6 +710,18 @@
           </table>
         </div>
       </section>
+      <!-- <section
+        class="mb-30 max-[1440px]:mb-22.5 max-[1024px]:mb-20 max-[768px]:mb-16 px-5 max-[768px]:px-0"
+      >
+        <h2
+          class="title mb-5 max-[1440px]:mb-12.5 max-[1024px]:mb-5.5 max-[768px]:mb-8 max-[768px]:ml-5"
+        >
+          Основные направления грузоперевозок:
+        </h2>
+        <div class="map-container">
+          <div id="activeMap"></div>
+        </div>
+      </section> -->
       <section
         class="rounded-[56px] max-[768px]:mb-16 max-[768px]:px-4 max-[1024px]:rounded-3xl max-[768px]:gap-6 max-[768px]:flex-col bg-[#3A3A3A] contact_section px-15 py-40 flex justify-between mb-30 max-[1440px]:mb-20 max-[1440px]:p-10"
       >
@@ -1077,7 +1090,9 @@
           </div>
         </div>
       </section>
-      <section class="px-15 max-[1440px]:px-10 max-[768px]:px-4">
+      <section
+        class="px-15 max-[1440px]:px-10 max-[768px]:px-4 mb-36 max-[1440px]:mb-10 max-[768px]:mb-16"
+      >
         <h2 class="title mb-14 max-[768px]:mb-8">FAQ</h2>
         <div
           class="p-12 accordion-item rounded-3xl mb-3 bg-[#F2F5F7] max-[768px]:px-4 max-[768px]:py-5 max-[768px]:rounded-2xl"
@@ -1697,4 +1712,5 @@
     </footer>
   </body>
   <script src="main.js"></script>
+  <script src="cart.js"></script>
 </html>
