--- a/cargo_transportation.html
+++ b/cargo_transportation.html
@@ -704,7 +704,7 @@
           </div>
         </div>
       </section>
-      <!-- <section
+      <section
         class="mb-30 max-[1440px]:mb-22.5 max-[1024px]:mb-20 max-[768px]:mb-16 px-5 max-[768px]:px-0"
       >
         <h2
@@ -715,7 +715,7 @@
         <div class="map-container">
           <div id="activeMap"></div>
         </div>
-      </section> -->
+      </section>
       <section
         class="rounded-[56px] max-[768px]:mb-16 max-[768px]:px-4 max-[1024px]:rounded-3xl max-[768px]:gap-6 max-[768px]:flex-col bg-[#3A3A3A] contact_section px-15 py-40 flex justify-between mb-30 max-[1440px]:mb-20 max-[1440px]:p-10"
       >
